--- a/Lab 4/Lab 4.csproj
+++ b/Lab 4/Lab 4.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,14 +46,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogic\Logic.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormNewCompetition.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNewCompetition.Designer.cs">
+      <DependentUpon>FormNewCompetition.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormNewMember.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNewMember.Designer.cs">
+      <DependentUpon>FormNewMember.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormNewSpeech.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNewSpeech.Designer.cs">
+      <DependentUpon>FormNewSpeech.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Competition.cs" />
+    <Compile Include="Model\FileNames.cs" />
+    <Compile Include="Model\Member.cs" />
+    <Compile Include="Model\Speech.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNewCompetition.resx">
+      <DependentUpon>FormNewCompetition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNewMember.resx">
+      <DependentUpon>FormNewMember.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNewSpeech.resx">
+      <DependentUpon>FormNewSpeech.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
